--- a/style.css
+++ b/style.css
@@ -19,13 +19,24 @@ p{
     font-weight: var(--regular);
 }
 
+.social{
+    display: inline-flex;
+    align-items: center;
+}
+
 body{
     font-family: 'IBM Plex Sans', sans-serif;
     background-image: url("assets/bg-main-mobile.png");
-    background-position: left;
+    background-position:  left;
     overflow-x: hidden;
+    background-color: var(--white);
 }
 
+header{
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+}
 
 .wrapper{
     display: flex;
@@ -33,17 +44,17 @@ body{
     align-items: center;
 }
 
-header{
+.header-div{
     width: 20.4375rem; /*327px*/
     color: var(-black);
     margin-bottom:10.375rem;
 }
-header h2{
+.header-div h2{
     font-size: 2.5rem;
     letter-spacing: -0.45px;
     line-height: 3rem;
 }
-header p{
+.header-div p{
     font-size: 1rem;
     line-height: 1.625rem;
 }
@@ -58,9 +69,9 @@ main{
     color: var(--white);
 }
 #app{
-    height: 430px;
+    height: 26.875rem;
     position: relative;
-    top:-98px;
+    top:-6.125rem;
 }
 .block1{
     display: flex;
@@ -69,20 +80,26 @@ main{
 
 .block2{
     border-radius: 0.75rem;
-    height: 546px;
+    height: 34.125rem;
     background-color: var(--orange);
     display: flex;
     justify-content: center;
 }
 .block-txt{
     width: 18.875rem; /*302px*/
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
 }
 .block2 h2{
     font-size: 2rem;
+    margin: 0;
 }
 .block2 p{
     font-size: 1.125rem;
     line-height: 1.75rem;
+    margin: 0;
 }
 .price span{
     font-weight: var(--bold);
@@ -98,10 +115,10 @@ main{
 
 /* buttons */
 .buttons-div{
-    height: 138px;
+    height: 8.625rem;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 .buttons-div p{
     font-size: 1.125rem;
@@ -109,8 +126,8 @@ main{
 }
 button{
     font-size: 1.125rem;
-    width: 296px;
-    height: 61px;
+    width: 18.5rem;
+    height: 3.8125rem;
     padding: 0;
     border: none;
     border-radius:0.75rem;
@@ -133,7 +150,7 @@ button{
 /* FOOTER STYLING*/
 footer{
     width:100vw;
-    min-height: 400px;
+    min-height:18.75rem;
     background-color: var(--white);
     display: flex;
     justify-content: center;
@@ -152,7 +169,185 @@ footer p{
     height: 6.5625rem;
 }
 .social{
-    width: 100px;
+    width: 6.25rem;
     display: inline-flex;
     justify-content: space-between;
+}
+
+@media screen and (max-width: 768px) {
+    .background-img{
+        display: none;
+    }
+}
+@media screen and (min-width: 768px) {
+    body{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    header{
+        background-image: url("assets/bg-main-tablet.png");
+        background-position:center bottom;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+    }
+    .wrapper{
+        width: 43.5rem;
+    }
+    .background-img{
+        display: block;
+        position: absolute;
+        right: -2.5rem;
+        top: -2.5rem;
+        z-index: -1;
+    }
+
+    .header-div{
+        width:43.5rem;
+    }
+    .header-div p, .header-div h2{
+        width: 32.5rem;
+    }
+    .header-div h2{
+        font-size: 4rem;
+    }
+    .header-div p{
+        font-size: 1.125rem;
+        line-height: 1.75rem;
+    }
+
+
+    /*main*/
+    main{
+        max-height: 37.5rem;
+        position: relative;
+    }
+    #app{
+        width:16.875rem;
+        height: 34.75rem;
+        right: 11.25rem;
+    }
+    
+    .block2{
+        width: 24.9375rem;
+        position: absolute;
+        top: 10rem;
+        left: 40%;
+    }
+
+
+    /* FOOTER STYLE*/
+    footer{
+        margin-top: 15rem;
+    }
+    .footer-box{
+        width:43.5rem;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .copyright{
+        width:22.875rem;
+    }
+    .social{
+        max-width:6.25rem ;
+    }
+    
+}
+
+@media screen and (min-width: 1275px) {
+    /* header */
+    header{
+        background-image: url("assets/bg-main-desktop.png");
+        background-position: center bottom;
+    }
+    .header-div{
+        width: 1110px;
+    }
+    .header-div h2{
+        width: 63.4375rem;
+        height: 11rem;
+        font-size: 5.5rem;
+        line-height: 5.5rem;
+    }
+    .header-div p{
+        width: 51.5625rem;
+        height: 6.375rem;
+        font-size: 1.25rem;
+        line-height: 2.125rem;
+    }
+    /* main */
+    main{
+        width: 69.375rem;
+    }
+    #app{
+        width:17.5rem;
+        height: 37.875rem;
+        right: 17.5rem;
+    }
+    
+    .block2{
+        width: 27.875rem;
+        height: 39.0625rem;
+        position: absolute;
+        top: 9rem;
+        left: 50%;
+
+    }
+
+    .block-txt p{
+        font-size: 1.25rem;
+        width: 333px;
+    }
+    .block-txt h2{
+        width: 333px;
+        font-size: 2.5rem;
+    }
+
+    /* buttons */
+    button{
+        width: 20.8125rem;
+        height: 3.8125rem;
+    }
+    .buttons-div{
+        width: 20.8125rem;
+    }
+    #apple p{
+        width: 8.875rem;
+    }
+    #android p{
+        width: 11.175rem;
+    }
+    button:hover{
+        cursor: pointer;
+    }
+    #apple:hover{
+        background-color: var(--blue);
+    }
+    #android:hover{
+        background-color: var(--yellow);
+    }   
+    .icon:hover{
+        cursor: pointer;
+        fill: var(--orange);
+    }
+
+
+
+    /* footer */
+    .footer-box{
+        width: 69.375rem;
+    }
+    .footer-box p{
+        width: 22.875rem;
+        margin: 0;
+    }
+    .copyright{
+        display: inline-flex;
+        width: 40.5625rem;
+        justify-content: space-between;
+        align-items: flex-start;
+    }
+
 }
